--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -24,6 +24,10 @@ ul {
     margin-top: 150px;
 }
 
+.mb_20 {
+    margin-bottom: 20px;
+}
+
 .panel-title {
     height: 40px;
     line-height: 40px;
