--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -1,10 +1,14 @@
 * {
     padding: 0;
     margin: 0;
+    list-style: none;
 }
 html, body {
     width: 100%;
     height: 100%;
+}
+img {
+    display: block;
 }
 .lt_container {
     max-width: 640px;
